the pincode field bind to location picker center coordinates using ionchange and some logic

--- a/src/app/pages/addlocation/addlocation.page.html
+++ b/src/app/pages/addlocation/addlocation.page.html
@@ -169,6 +169,7 @@
             type="text"
             formControlName="pincode"
             required
+            (ionChange)="onChange($event)"
           >
           </ion-input>
         </ion-item>
