Payment for a specific location page changes

--- a/src/app/pages/multilocations-payment/multilocations-payment.page.html
+++ b/src/app/pages/multilocations-payment/multilocations-payment.page.html
@@ -23,8 +23,8 @@
         >
           <ion-select-option
             *ngFor="let option of locations"
-            value="{{option}}"
-            >{{option}}</ion-select-option
+            value="{{option.houseId}}"
+            >{{option.houseName}}</ion-select-option
           >
         </ion-select>
       </ion-list>
